--- a/dev-db/mysql/ChangeLog
+++ b/dev-db/mysql/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/mysql
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.448 2008/03/10 02:55:18 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.449 2008/03/10 02:58:09 robbat2 Exp $
+
+  10 Mar 2008; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.27-r1.ebuild,
+  mysql-4.1.22-r1.ebuild, mysql-4.1.23_alpha20070101-r61.ebuild,
+  mysql-5.0.56.ebuild:
+  Satisfy the never slumbering repoman.
 
 *mysql-5.0.56 (10 Mar 2008)
 
