--- a/x11-misc/util-macros/ChangeLog
+++ b/x11-misc/util-macros/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/util-macros
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/util-macros/ChangeLog,v 1.57 2008/01/31 04:39:14 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/util-macros/ChangeLog,v 1.58 2008/03/10 03:02:01 dberkholz Exp $
+
+*util-macros-1.1.6 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +util-macros-1.1.6.ebuild:
+  Bump.
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
   -files/1.0.2-driver-man-suffix.patch,
