--- a/app-admin/sysstat/ChangeLog
+++ b/app-admin/sysstat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/sysstat
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.116 2008/03/09 16:01:12 cla Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.117 2008/03/10 03:15:31 jer Exp $
+
+  10 Mar 2008; Jeroen Roovers <jer@gentoo.org> sysstat-8.1.1.ebuild:
+  Revert x86 and ppc stabilisation for development version 8.1.1 (bug #212398).
 
   09 Mar 2008; Dawid Węgliński <cla@gentoo.org> sysstat-8.1.1.ebuild:
   Stable on x86 (bug #212398)
