--- a/sys-fs/ntfsprogs/ChangeLog
+++ b/sys-fs/ntfsprogs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/ntfsprogs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/ntfsprogs/ChangeLog,v 1.55 2008/02/10 14:15:25 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/ntfsprogs/ChangeLog,v 1.56 2008/03/10 04:12:26 ricmm Exp $
+
+  10 Mar 2008; <ricmm@gentoo.org> ntfsprogs-1.13.0.ebuild,
+  ntfsprogs-1.13.1.ebuild, ntfsprogs-1.13.1-r1.ebuild:
+  Drop to ~mips due to unstable deps
 
   10 Feb 2008; Markus Meier <maekke@gentoo.org> ntfsprogs-2.0.0.ebuild:
   x86 stable, bug #208918
