--- a/net-print/foomatic-filters/ChangeLog
+++ b/net-print/foomatic-filters/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-print/foomatic-filters
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/foomatic-filters/ChangeLog,v 1.56 2007/11/20 03:25:53 kumba Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-print/foomatic-filters/ChangeLog,v 1.57 2008/03/10 04:20:27 ricmm Exp $
+
+  10 Mar 2008; <ricmm@gentoo.org> foomatic-filters-3.0.2-r1.ebuild,
+  foomatic-filters-3.0.20060720.ebuild:
+  Drop to ~mips to match net-print/cups
 
   20 Nov 2007; Joshua Kinard <kumba@gentoo.org>
   foomatic-filters-3.0.20060720.ebuild:
