--- a/dev-python/pycairo/ChangeLog
+++ b/dev-python/pycairo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pycairo
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.52 2008/02/07 14:14:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.53 2008/03/10 05:04:17 ricmm Exp $
+
+  10 Mar 2008; <ricmm@gentoo.org> pycairo-1.2.6.ebuild,
+  pycairo-1.4.0.ebuild:
+  Drop to ~mips to match x11-libs/cairo
 
   07 Feb 2008; Raúl Porcel <armin76@gentoo.org> pycairo-1.4.12.ebuild:
   alpha/ia64/sparc/x86 stable
