--- a/sys-apps/man-pages/ChangeLog
+++ b/sys-apps/man-pages/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/man-pages
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.104 2008/02/15 14:48:57 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.105 2008/03/10 05:19:58 ricmm Exp $
+
+  10 Mar 2008; <ricmm@gentoo.org> man-pages-2.76.ebuild:
+  Drop to ~mips due to unstable deps
 
 *man-pages-2.78 (15 Feb 2008)
 
