--- a/kde-base/kdebase/ChangeLog
+++ b/kde-base/kdebase/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.435 2008/03/07 00:35:36 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.436 2008/03/10 06:17:56 ingmar Exp $
+
+*kdebase-3.5.9-r1 (10 Mar 2008)
+
+  10 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
+  +kdebase-3.5.9-r1.ebuild:
+  Fix src_install(), bug 211376.
 
   07 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> kdebase-3.5.9.ebuild:
   Keyword ~mips.
