--- a/dev-libs/qof/ChangeLog
+++ b/dev-libs/qof/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/qof
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/qof/ChangeLog,v 1.15 2008/03/01 13:43:36 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/qof/ChangeLog,v 1.16 2008/03/10 07:12:21 opfer Exp $
+
+  10 Mar 2008; Christian Faulhammer <opfer@gentoo.org> qof-0.7.5.ebuild:
+  stable x86, bug 212902
 
   01 Mar 2008; nixnut <nixnut@gentoo.org> qof-0.7.5.ebuild:
   Added ~ppc wrt bug 211735
