--- a/net-p2p/azureus/ChangeLog
+++ b/net-p2p/azureus/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/azureus
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/azureus/ChangeLog,v 1.60 2008/03/08 20:50:03 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/azureus/ChangeLog,v 1.61 2008/03/10 07:32:35 opfer Exp $
+
+  10 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
+  azureus-3.0.4.2-r1.ebuild:
+  filter jikes
 
   08 Mar 2008; Markus Meier <maekke@gentoo.org> azureus-3.0.4.2-r1.ebuild:
   unquote A, x86 stable, bug #212667
