--- a/net-analyzer/sarg/ChangeLog
+++ b/net-analyzer/sarg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/sarg
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sarg/ChangeLog,v 1.41 2008/03/09 12:43:35 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sarg/ChangeLog,v 1.42 2008/03/10 07:58:45 welp Exp $
+
+  10 Mar 2008; <welp@gentoo.org> sarg-2.2.5.ebuild:
+  Stable on amd64; bug 212731
 
   09 Mar 2008; Markus Meier <maekke@gentoo.org> sarg-2.2.5.ebuild:
   x86 stable, security bug #212731
