--- a/games-action/supertuxkart/ChangeLog
+++ b/games-action/supertuxkart/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-action/supertuxkart
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/supertuxkart/ChangeLog,v 1.8 2007/07/22 00:16:44 nyhm Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-action/supertuxkart/ChangeLog,v 1.9 2008/03/10 08:51:20 mr_bones_ Exp $
+
+*supertuxkart-0.4 (10 Mar 2008)
+
+  10 Mar 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  +supertuxkart-0.4.ebuild:
+  version bump
 
 *supertuxkart-0.3 (22 Jul 2007)
 
