--- a/dev-java/ibm-jdk-bin/ChangeLog
+++ b/dev-java/ibm-jdk-bin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/ibm-jdk-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.151 2008/03/05 21:06:37 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.152 2008/03/10 08:57:47 welp Exp $
+
+  10 Mar 2008; <welp@gentoo.org> ibm-jdk-bin-1.4.2.10.ebuild:
+  Stable on amd64; bug 198644
 
   05 Mar 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   ibm-jdk-bin-1.4.2.10.ebuild:
