--- a/dev-lang/gwydion-dylan-bin/ChangeLog
+++ b/dev-lang/gwydion-dylan-bin/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-lang/gwydion-dylan-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/gwydion-dylan-bin/ChangeLog,v 1.5 2008/03/09 21:06:02 araujo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/gwydion-dylan-bin/ChangeLog,v 1.6 2008/03/10 09:13:35 tove Exp $
 
 *gwydion-dylan-bin-2.4.0-r1 (09 Mar 2008)
 
@@ -9,7 +9,7 @@
   +gwydion-dylan-bin-2.4.0-r1.ebuild:
   Adding new revision
 
-  02 Jul 2007; Piotr JaroszyÅski <peper@gentoo.org>
+  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
   gwydion-dylan-bin-2.4.0.ebuild:
   (QA) RESTRICT clean up.
 
@@ -17,7 +17,7 @@
   gwydion-dylan-bin-2.4.0.ebuild:
   Fix *initd, *confd and *envd calls (#17388, #174266)
 
-  09 Feb 2007; Diego PettenÃ² <flameeyes@gentoo.org> ChangeLog:
+  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
 
 *gwydion-dylan-bin-2.4.0 (02 Aug 2005)
