--- a/net-mail/dovecot/ChangeLog
+++ b/net-mail/dovecot/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/dovecot
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.147 2008/03/06 07:03:32 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.148 2008/03/10 09:24:14 wschlich Exp $
+
+*dovecot-1.1_rc3 (10 Mar 2008)
+*dovecot-1.0.13 (10 Mar 2008)
+
+  10 Mar 2008; Wolfram Schlich <wschlich@gentoo.org> metadata.xml,
+  +dovecot-1.0.13.ebuild, +dovecot-1.1_rc3.ebuild:
+  version bump
 
 *dovecot-1.0.12 (06 Mar 2008)
 
