--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.433 2008/03/05 09:51:35 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.434 2008/03/10 10:50:55 armin76 Exp $
+
+*vanilla-sources-2.6.25_rc5 (10 Mar 2008)
+
+  10 Mar 2008; Raúl Porcel <armin76@gentoo.org>
+  +vanilla-sources-2.6.25_rc5.ebuild:
+  Version bump
 
 *vanilla-sources-2.4.36.2 (05 Mar 2008)
 
