--- a/dev-libs/oniguruma/ChangeLog
+++ b/dev-libs/oniguruma/ChangeLog
@@ -1,9 +1,8 @@
 # ChangeLog for dev-libs/oniguruma
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/oniguruma/ChangeLog,v 1.33 2008/03/10 11:08:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/oniguruma/ChangeLog,v 1.34 2008/03/10 11:11:54 armin76 Exp $
 
-  10 Mar 2008; Raúl Porcel <armin76@gentoo.org> oniguruma-5.9.0.ebuild,
-  oniguruma-5.9.1.ebuild:
+  10 Mar 2008; Raúl Porcel <armin76@gentoo.org> oniguruma-5.9.1.ebuild:
   alpha/ia64/sparc stable
 
   17 Feb 2008; Alexis Ballier <aballier@gentoo.org> oniguruma-5.9.1.ebuild:
