--- a/sys-apps/most/ChangeLog
+++ b/sys-apps/most/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/most
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/most/ChangeLog,v 1.40 2008/03/09 14:59:19 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/most/ChangeLog,v 1.41 2008/03/10 11:14:36 armin76 Exp $
+
+  10 Mar 2008; Raúl Porcel <armin76@gentoo.org> most-5.0.0a.ebuild:
+  alpha/sparc stable wrt #212788
 
   09 Mar 2008; nixnut <nixnut@gentoo.org> most-5.0.0a.ebuild:
   Stable on ppc wrt bug 212788
