--- a/dev-util/source-highlight/ChangeLog
+++ b/dev-util/source-highlight/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/source-highlight
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/source-highlight/ChangeLog,v 1.27 2008/02/13 13:24:23 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/source-highlight/ChangeLog,v 1.28 2008/03/10 11:20:59 dev-zero Exp $
+
+*source-highlight-2.9 (10 Mar 2008)
+
+  10 Mar 2008; Tiziano Müller <dev-zero@gentoo.org>
+  +source-highlight-2.9.ebuild:
+  Version bump (bug #212823).
 
 *source-highlight-2.8 (13 Feb 2008)
 
