--- a/app-admin/monit/ChangeLog
+++ b/app-admin/monit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/monit
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.31 2008/02/06 19:47:55 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.32 2008/03/10 12:09:24 caleb Exp $
+
+  10 Mar 2008; Caleb Tennis <caleb@gentoo.org> monit-4.10.1.ebuild:
+  This version is now GPL-3
 
 *monit-4.10.1 (06 Feb 2008)
 
