--- a/dev-cpp/gflags/ChangeLog
+++ b/dev-cpp/gflags/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/gflags
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.3 2008/03/09 08:27:44 antarus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.4 2008/03/10 12:11:19 antarus Exp $
+
+  10 Mar 2008; Alec Warner <antarus@gentoo.org> gflags-0.7.ebuild:
+  distutils fix from dev-zero
 
   09 Mar 2008; Alec Warner <antarus@gentoo.org> gflags-0.7.ebuild:
   remove mirror://, it was wrong anyway
