--- a/dev-java/xmlgraphics-commons/ChangeLog
+++ b/dev-java/xmlgraphics-commons/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/xmlgraphics-commons
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xmlgraphics-commons/ChangeLog,v 1.12 2008/01/27 03:56:56 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xmlgraphics-commons/ChangeLog,v 1.13 2008/03/10 13:10:01 betelgeuse Exp $
+
+  10 Mar 2008; Petteri Räty <betelgeuse@gentoo.org>
+  xmlgraphics-commons-1.2.ebuild:
+  Restrict DEPEND to 1.4 to 1.6 because classes use com.sun.image.
 
   27 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
   -xmlgraphics-commons-1.1.ebuild:
