--- a/media-libs/libquicktime/ChangeLog
+++ b/media-libs/libquicktime/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libquicktime
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.107 2008/03/07 15:22:18 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.108 2008/03/10 13:46:36 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org> libquicktime-1.0.2.ebuild:
+  amd64 stable, bug 212020
 
   07 Mar 2008; Brent Baude <ranger@gentoo.org> libquicktime-1.0.2.ebuild:
   stable ppc64, bug 212020
