--- a/media-video/dvgrab/ChangeLog
+++ b/media-video/dvgrab/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/dvgrab
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/dvgrab/ChangeLog,v 1.28 2008/02/08 11:28:33 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/dvgrab/ChangeLog,v 1.29 2008/03/10 13:51:09 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org> dvgrab-3.0.ebuild:
+  amd64 stable, bug 203045
 
   08 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org> dvgrab-3.0.ebuild:
   ppc stable, bug #203045
