--- a/sys-libs/slang/ChangeLog
+++ b/sys-libs/slang/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/slang
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.84 2008/03/10 11:12:34 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.85 2008/03/10 13:55:32 drac Exp $
+
+  10 Mar 2008; Samuli Suominen <drac@gentoo.org> slang-2.1.3-r1.ebuild:
+  amd64 stable wrt #211986
 
   10 Mar 2008; Raúl Porcel <armin76@gentoo.org> slang-2.1.3-r1.ebuild:
   alpha/ia64/sparc stable wrt #211986
