--- a/dev-tex/listings/ChangeLog
+++ b/dev-tex/listings/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/listings
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/listings/ChangeLog,v 1.20 2008/03/09 13:44:56 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/listings/ChangeLog,v 1.21 2008/03/10 13:56:02 armin76 Exp $
+
+  10 Mar 2008; Raúl Porcel <armin76@gentoo.org> listings-1.4.ebuild:
+  alpha stable wrt #180550
 
   09 Mar 2008; nixnut <nixnut@gentoo.org> listings-1.4.ebuild:
   Stable on ppc wrt bug 180550
