--- a/www-apps/horde-kronolith/ChangeLog
+++ b/www-apps/horde-kronolith/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/horde-kronolith
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-kronolith/ChangeLog,v 1.36 2008/01/12 05:29:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-kronolith/ChangeLog,v 1.37 2008/03/10 14:02:19 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org> horde-kronolith-2.1.7.ebuild:
+  amd64 stable, bug 212635
 
 *horde-kronolith-2.1.7 (12 Jan 2008)
 
