--- a/net-im/empathy/ChangeLog
+++ b/net-im/empathy/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/empathy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/empathy/ChangeLog,v 1.18 2008/03/06 09:41:22 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/empathy/ChangeLog,v 1.19 2008/03/10 14:04:57 leio Exp $
+
+*empathy-0.22.0 (10 Mar 2008)
+
+  10 Mar 2008; Mart Raudsepp <leio@gentoo.org> +empathy-0.22.0.ebuild:
+  Version bump
 
   06 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
   empathy-0.21.91.ebuild:
