--- a/www-apps/viewvc/ChangeLog
+++ b/www-apps/viewvc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/viewvc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/viewvc/ChangeLog,v 1.22 2008/03/09 06:45:08 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/viewvc/ChangeLog,v 1.23 2008/03/10 14:05:48 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org> viewvc-1.0.5.ebuild:
+  amd64 stable, bug 212288
 
   09 Mar 2008; Tobias Scherbaum <dertobi123@gentoo.org> viewvc-1.0.5.ebuild:
   ppc stable, bug #212288
