--- a/app-shells/zsh-completion/ChangeLog
+++ b/app-shells/zsh-completion/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-shells/zsh-completion
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh-completion/ChangeLog,v 1.29 2008/01/11 05:46:05 compnerd Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh-completion/ChangeLog,v 1.30 2008/03/10 14:08:57 cla Exp $
+
+*zsh-completion-20080310 (10 Mar 2008)
+
+  10 Mar 2008; Dawid Węgliński <cla@gentoo.org>
+  +zsh-completion-20080310.ebuild:
+  Version bump to 20080310 (bug #212941)
 
 *zsh-completion-20080110 (11 Jan 2008)
 
