--- a/app-editors/jed/ChangeLog
+++ b/app-editors/jed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/jed
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/jed/ChangeLog,v 1.47 2008/03/10 11:13:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/jed/ChangeLog,v 1.48 2008/03/10 14:13:40 drac Exp $
+
+  10 Mar 2008; Samuli Suominen <drac@gentoo.org> jed-0.99.18.ebuild:
+  amd64 stable wrt #211991
 
   10 Mar 2008; Raúl Porcel <armin76@gentoo.org> jed-0.99.18.ebuild:
   sparc stable wrt #211991
