--- a/dev-libs/klibc/ChangeLog
+++ b/dev-libs/klibc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/klibc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/klibc/ChangeLog,v 1.56 2008/02/14 18:18:22 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/klibc/ChangeLog,v 1.57 2008/03/10 14:16:00 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org> klibc-1.5.8.ebuild:
+  amd64 stable, bug 208131
 
   14 Feb 2008; nixnut <nixnut@gentoo.org> klibc-1.5.8.ebuild:
   Stable on ppc wrt bug 208131
