--- a/media-tv/xmltv/ChangeLog
+++ b/media-tv/xmltv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-tv/xmltv
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/xmltv/ChangeLog,v 1.78 2008/02/24 17:56:08 mattepiu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/xmltv/ChangeLog,v 1.79 2008/03/10 14:56:17 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org> xmltv-0.5.50.ebuild:
+  amd64 stable, bug 205403
 
   24 Feb 2008; Matteo Azzali <mattepiu@gentoo.org> xmltv-0.5.50.ebuild:
   Added two deps fo na_dtv, as for bug #205403 , sorry.
