--- a/net-libs/gloox/ChangeLog
+++ b/net-libs/gloox/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gloox
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gloox/ChangeLog,v 1.5 2008/03/04 20:13:32 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gloox/ChangeLog,v 1.6 2008/03/10 15:02:10 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org> gloox-0.9.8.ebuild:
+  amd64 stable, bug 202261
 
 *gloox-0.9.9.3 (04 Mar 2008)
 
