--- a/media-fonts/font-bitstream-speedo/ChangeLog
+++ b/media-fonts/font-bitstream-speedo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/font-bitstream-speedo
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-bitstream-speedo/ChangeLog,v 1.16 2008/02/25 13:14:38 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-bitstream-speedo/ChangeLog,v 1.17 2008/03/10 15:13:51 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org>
+  font-bitstream-speedo-1.0.0.ebuild:
+  amd64 stable, bug 211202
 
   25 Feb 2008; Jeroen Roovers <jer@gentoo.org>
   font-bitstream-speedo-1.0.0.ebuild:
