--- a/media-libs/libtheora/ChangeLog
+++ b/media-libs/libtheora/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libtheora
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.68 2008/03/05 18:58:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.69 2008/03/10 15:29:16 pva Exp $
+
+  10 Mar 2008; Peter Volkov <pva@gentoo.org> libtheora-1.0_beta2-r1.ebuild:
+  Filtering -fforce-addr and -frename-registers for old compilers, bug #200549.
 
   05 Mar 2008; Raúl Porcel <armin76@gentoo.org>
   libtheora-1.0_beta2-r1.ebuild:
