--- a/www-apps/mythweb/ChangeLog
+++ b/www-apps/mythweb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/mythweb
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mythweb/ChangeLog,v 1.58 2008/03/09 20:48:14 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mythweb/ChangeLog,v 1.59 2008/03/10 15:30:17 beandog Exp $
+
+  10 Mar 2008; Steve Dibb <beandog@gentoo.org> mythweb-0.21_p16468.ebuild:
+  Add INSTALL to dodoc for reference, bug 212946
 
 *mythweb-0.21_p16468 (09 Mar 2008)
 
