--- a/net-misc/tn5250/ChangeLog
+++ b/net-misc/tn5250/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/tn5250
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tn5250/ChangeLog,v 1.17 2008/02/09 13:17:29 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tn5250/ChangeLog,v 1.18 2008/03/10 15:35:40 cla Exp $
+
+  10 Mar 2008; Dawid Węgliński <cla@gentoo.org> tn5250-0.17.3-r1.ebuild:
+  Stable on x86 (bug #212942)
 
 *tn5250-0.17.3-r1 (09 Feb 2008)
 
