--- a/dev-java/ibm-jre-bin/ChangeLog
+++ b/dev-java/ibm-jre-bin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/ibm-jre-bin
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.88 2008/03/05 21:09:51 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.89 2008/03/10 16:11:27 welp Exp $
+
+  10 Mar 2008; Peter Weller <welp@gentoo.org> ibm-jre-bin-1.4.2.10.ebuild:
+  Stable on amd64; bug 198644
 
   05 Mar 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   ibm-jre-bin-1.4.2.10.ebuild:
