--- a/app-misc/tomboy/ChangeLog
+++ b/app-misc/tomboy/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/tomboy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/tomboy/ChangeLog,v 1.63 2008/02/02 15:53:23 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/tomboy/ChangeLog,v 1.64 2008/03/10 16:31:05 compnerd Exp $
+
+*tomboy-0.10.0 (10 Mar 2008)
+
+  10 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
+  +tomboy-0.10.0.ebuild:
+  Version bump from upstream
 
   02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> tomboy-0.8.2.ebuild:
   Stable on amd64 wrt bug #208366.
