--- a/net-im/telepathy-mission-control/ChangeLog
+++ b/net-im/telepathy-mission-control/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-im/telepathy-mission-control
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.15 2008/03/08 15:24:21 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.16 2008/03/10 17:25:13 coldwind Exp $
+
+*telepathy-mission-control-4.63 (10 Mar 2008)
+
+  10 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
+  +telepathy-mission-control-4.63.ebuild:
+  Version bump.
 
   08 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
   telepathy-mission-control-4.61.ebuild:
