--- a/media-tv/mythtv/ChangeLog
+++ b/media-tv/mythtv/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-tv/mythtv
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.222 2008/03/09 16:53:37 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.223 2008/03/10 17:30:54 cardoe Exp $
+
+*mythtv-0.21_p16483 (10 Mar 2008)
+
+  10 Mar 2008; Doug Goldstein <cardoe@gentoo.org>
+  +mythtv-0.21_p16483.ebuild:
+  fix resolution changes in DVD menu
 
 *mythtv-0.21_p16468 (09 Mar 2008)
 
