--- a/x11-base/xorg-server/ChangeLog
+++ b/x11-base/xorg-server/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-base/xorg-server
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.318 2008/02/11 06:04:07 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.319 2008/03/10 17:39:30 zlin Exp $
+
+  10 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org>
+  xorg-server-1.4.0.90-r2.ebuild, xorg-server-1.4.0.90-r3.ebuild:
+  Remove print_installed(). Bug #211588.
 
   11 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
   xorg-server-1.3.0.0-r5.ebuild:
