--- a/media-libs/libdiscid/ChangeLog
+++ b/media-libs/libdiscid/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libdiscid
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libdiscid/ChangeLog,v 1.5 2008/01/09 16:28:19 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libdiscid/ChangeLog,v 1.6 2008/03/10 18:22:54 nixnut Exp $
+
+  10 Mar 2008; nixnut <nixnut@gentoo.org> libdiscid-0.1.1.ebuild:
+  Added ~ppc wrt bug 203784
 
   09 Jan 2008; Jeroen Roovers <jer@gentoo.org> libdiscid-0.1.1.ebuild:
   Marked ~hppa (bug #203784).
