--- a/media-libs/musicbrainz/ChangeLog
+++ b/media-libs/musicbrainz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/musicbrainz
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.78 2008/01/09 16:28:53 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.79 2008/03/10 18:24:08 nixnut Exp $
+
+  10 Mar 2008; nixnut <nixnut@gentoo.org> musicbrainz-3.0.1.ebuild:
+  Added ~ppc wrt bug 203784
 
   09 Jan 2008; Jeroen Roovers <jer@gentoo.org> musicbrainz-3.0.1.ebuild:
   Marked ~hppa (bug #203784).
