--- a/www-apps/horde-kronolith/ChangeLog
+++ b/www-apps/horde-kronolith/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/horde-kronolith
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-kronolith/ChangeLog,v 1.37 2008/03/10 14:02:19 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-kronolith/ChangeLog,v 1.38 2008/03/10 19:31:48 fmccor Exp $
+
+  10 Mar 2008; Ferris McCormick <fmccor@gentoo.org>
+  horde-kronolith-2.1.7.ebuild:
+  Sparc stable --- Security Bug #212635 --- seems OK.
 
   10 Mar 2008; Steve Dibb <beandog@gentoo.org> horde-kronolith-2.1.7.ebuild:
   amd64 stable, bug 212635
