--- a/sys-apps/smartmontools/ChangeLog
+++ b/sys-apps/smartmontools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/smartmontools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/smartmontools/ChangeLog,v 1.74 2008/03/10 19:29:06 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/smartmontools/ChangeLog,v 1.75 2008/03/10 19:37:22 robbat2 Exp $
+
+*smartmontools-5.38 (10 Mar 2008)
+
+  10 Mar 2008; Robin H. Johnson <robbat2@gentoo.org>
+  +smartmontools-5.38.ebuild:
+  Version bump.
 
 *smartmontools-5.37-r1 (10 Mar 2008)
 
