--- a/net-im/pymsn-t/ChangeLog
+++ b/net-im/pymsn-t/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-im/pymsn-t
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pymsn-t/ChangeLog,v 1.10 2007/06/04 20:48:44 griffon26 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/pymsn-t/ChangeLog,v 1.11 2008/03/10 19:50:14 griffon26 Exp $
+
+*pymsn-t-0.11.3 (10 Mar 2008)
+
+  10 Mar 2008; Maurice van der Pot <griffon26@gentoo.org>
+  +pymsn-t-0.11.3.ebuild:
+  Version bump to 0.11.3.
 
   04 Jun 2007; Maurice van der Pot <griffon26@gentoo.org>
   files/pymsn-t-0.11.2-initd:
