--- a/x11-libs/gtksourceview/ChangeLog
+++ b/x11-libs/gtksourceview/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for x11-libs/gtksourceview
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.127 2008/02/05 10:44:13 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.128 2008/03/10 19:55:21 dang Exp $
+
+*gtksourceview-2.2.0 (10 Mar 2008)
+
+  10 Mar 2008; Daniel Gryniewicz <dang@gentoo.org>
+  -gtksourceview-2.1.2.ebuild, +gtksourceview-2.2.0.ebuild:
+  Bump to 2.2.0
+  * Misc bugfixes
+  * Updated translations
 
 *gtksourceview-2.1.2 (05 Feb 2008)
 
