--- a/app-misc/pax-utils/ChangeLog
+++ b/app-misc/pax-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/pax-utils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.96 2008/03/09 15:38:05 solar Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.97 2008/03/11 15:20:29 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> pax-utils-0.1.17.ebuild:
+  stable ppc64, bug 212499
 
   09 Mar 2008; <solar@gentoo.org> pax-utils-0.1.17.ebuild:
   - stable on amd64
