--- a/dev-java/cglib/ChangeLog
+++ b/dev-java/cglib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/cglib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/cglib/ChangeLog,v 1.38 2008/02/20 00:31:28 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/cglib/ChangeLog,v 1.39 2008/03/11 15:25:14 betelgeuse Exp $
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> cglib-2.1.3.ebuild:
+  Add RESTRICT test for the upcoming generic src_test.
 
   20 Feb 2008; Petteri Räty <betelgeuse@gentoo.org> cglib-2.1.3.ebuild:
   Filter ecj-3.3 and switch to slot deps.
