--- a/dev-java/cglib/ChangeLog
+++ b/dev-java/cglib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/cglib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/cglib/ChangeLog,v 1.39 2008/03/11 15:25:14 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/cglib/ChangeLog,v 1.40 2008/03/11 15:27:14 betelgeuse Exp $
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> cglib-2.0.2-r2.ebuild,
+  cglib-2.2_beta1.ebuild:
+  Add app-arch/unzip to DEPEND.
 
   11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> cglib-2.1.3.ebuild:
   Add RESTRICT test for the upcoming generic src_test.
