--- a/sys-apps/hwsetup/ChangeLog
+++ b/sys-apps/hwsetup/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/hwsetup
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwsetup/ChangeLog,v 1.52 2008/03/07 19:06:43 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwsetup/ChangeLog,v 1.53 2008/03/11 15:27:55 wolf31o2 Exp $
+
+  11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> hwsetup-1.2.ebuild:
+  After the latest fexes, we no longer require libkudzu to exist on our
+  running system with hwsetup. This should save us a little space on our
+  minimal CD.
 
   07 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> hwsetup-1.2.ebuild:
   Fix compilation when using --as-needed by filtering it, for now.
