--- a/dev-lang/erlang/ChangeLog
+++ b/dev-lang/erlang/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/erlang
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.105 2008/03/09 15:08:25 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.106 2008/03/11 15:28:20 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> erlang-12.2.1.ebuild:
+  stable ppc64, bug 212684
 
   09 Mar 2008; Raúl Porcel <armin76@gentoo.org> erlang-12.2.1.ebuild:
   alpha stable wrt #212684
