--- a/sys-libs/slang/ChangeLog
+++ b/sys-libs/slang/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/slang
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.86 2008/03/11 14:46:43 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.87 2008/03/11 15:33:58 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> ChangeLog:
+  stable ppc64, bug 211991
 
   11 Mar 2008; Brent Baude <ranger@gentoo.org> slang-2.1.3-r1.ebuild:
   stable ppc64, bug 211986
