--- a/dev-java/cldc-api/ChangeLog
+++ b/dev-java/cldc-api/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/cldc-api
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/cldc-api/ChangeLog,v 1.1 2008/01/24 23:48:05 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/cldc-api/ChangeLog,v 1.2 2008/03/11 15:36:44 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> cldc-api-1.1.ebuild:
+  Marking cldc-api-1.1 ~ppc64 for bug 213021
 
 *cldc-api-1.1 (24 Jan 2008)
 
